crates/shipper-cli/tests/snapshots/e2e_expanded__help_status.snap
---
source: crates/shipper-cli/tests/e2e_expanded.rs
expression: normalize_status_help(&stdout)
---
Compare local workspace versions to the registry.

Use status before publish or after an interruption to see which local crate
versions already exist on the target registry. This is a read-only registry
comparison and does not mutate `.shipper/` state.

EXAMPLES:
    # Check every publishable workspace member:
    shipper status

    # Check one package against the configured registry:
    shipper status --package shipper-core

    # Watch persisted release progress while publish or resume is running:
    shipper status --watch


Usage: shipper-cli status [OPTIONS]

Options:
      --watch
          Watch local `.shipper/` state and events until interrupted.

          Watch mode is read-only and does not poll the registry. It summarizes `state.json` and `events.jsonl` so operators can see current progress, the last durable event, and the next scheduled wait/retry/poll.

      --config <CONFIG>
          Path to a custom configuration file (.shipper.toml)

      --manifest-path <MANIFEST_PATH>
          Path to the workspace Cargo.toml

          [default: Cargo.toml]

      --registry <REGISTRY>
          Cargo registry name (default: crates-io)

      --api-base <API_BASE>
          Registry API base URL (default: <https://crates.io>)

      --allow-loopback
          Permit loopback HTTP for an explicitly configured local test or rehearsal registry. Does not permit private-network destinations

      --package <PACKAGES>
          Restrict to specific packages (repeatable). If omitted, publishes all publishable workspace members

      --state-dir <STATE_DIR>
          Directory for shipper state and receipts (default: .shipper)

      --format <FORMAT>
          Output format: text (default) or json

          [default: text]
          [possible values: text, json]

      --verbose
          Show detailed dependency analysis for plan command

  -q, --quiet
          Suppress informational output

  -h, --help
          Print help (see a summary with '-h')
