crates/shipper-cli/tests/snapshots/e2e_expanded__plan_all_publish_false.snap
---
source: crates/shipper-cli/tests/e2e_expanded.rs
expression: normalize_output(&stdout)
---
plan_id: <PLAN_ID>
registry: crates-io (https://crates.io)
workspace_root: <WORKSPACE_ROOT>

Total packages to publish: 0
Plan summary:
  Publishable packages: 0
  Skipped packages: 2
  Internal dependency edges: 0
  Publish levels: 0
  Plan artifact: .shipper/plan.txt (`shipper plan --format json` capture)

Skipped packages:
  - internal-a@0.1.0 (publish = false)
  - internal-b@0.1.0 (publish = false)


Result: plan created; no packages were published
Next: run preflight with the same manifest, package, configuration, and registry selection
