crates/shipper-cli/tests/snapshots/e2e_expanded__plan_format_json_flag.snap
---
source: crates/shipper-cli/tests/e2e_expanded.rs
expression: "normalize_tempdir_json_output(&stdout, td.path())"
---
{
  "schema_version": "shipper.plan.v1",
  "outcome": {
    "status": "planned",
    "publication_performed": false,
    "next_action": {
      "kind": "preflight",
      "reason": "run preflight with the same manifest, package, configuration, and registry selection",
      "requires_confirmation": false
    }
  },
  "plan_id": "affac35fb544fb5b3de322fb4c6b26c2be6c9bf3eb7d7edd4af4a29b7b59fd3f",
  "registry": {
    "name": "crates-io",
    "api_base": "https://crates.io"
  },
  "workspace_root": "<WORKSPACE_ROOT>",
  "publishable_count": 1,
  "skipped_count": 0,
  "internal_dependency_edges": 0,
  "publish_levels": 1,
  "artifacts": [
    {
      "kind": "plan_json_stdout",
      "path": ".shipper/plan.txt",
      "description": "Recommended CI capture path for `shipper plan --format json`."
    }
  ],
  "packages": [
    {
      "order": 1,
      "name": "demo",
      "version": "0.1.0",
      "manifest_path": "<WORKSPACE_ROOT>/demo/Cargo.toml",
      "level": 0,
      "dependencies": [],
      "order_reason": "no workspace dependencies"
    }
  ],
  "skipped": []
}
