crates/shipper-cli/tests/snapshots/e2e_expanded__plan_format_json_multi_crate.snap
---
source: crates/shipper-cli/tests/e2e_expanded.rs
expression: "normalize_tempdir_json_output(&stdout, td.path())"
---
{
  "schema_version": "shipper.plan.v1",
  "outcome": {
    "status": "planned",
    "publication_performed": false,
    "next_action": {
      "kind": "preflight",
      "reason": "run preflight with the same manifest, package, configuration, and registry selection",
      "requires_confirmation": false
    }
  },
  "plan_id": "f50f53d98fbd6f2bb7b4a3bbb9e0abf353d277d4c3e6766ec6cd331a78b9c268",
  "registry": {
    "name": "crates-io",
    "api_base": "https://crates.io"
  },
  "workspace_root": "<WORKSPACE_ROOT>",
  "publishable_count": 3,
  "skipped_count": 0,
  "internal_dependency_edges": 2,
  "publish_levels": 3,
  "artifacts": [
    {
      "kind": "plan_json_stdout",
      "path": ".shipper/plan.txt",
      "description": "Recommended CI capture path for `shipper plan --format json`."
    }
  ],
  "packages": [
    {
      "order": 1,
      "name": "core-lib",
      "version": "0.2.0",
      "manifest_path": "<WORKSPACE_ROOT>/core-lib/Cargo.toml",
      "level": 0,
      "dependencies": [],
      "order_reason": "no workspace dependencies"
    },
    {
      "order": 2,
      "name": "mid-lib",
      "version": "0.3.0",
      "manifest_path": "<WORKSPACE_ROOT>/mid-lib/Cargo.toml",
      "level": 1,
      "dependencies": [
        "core-lib@0.2.0"
      ],
      "order_reason": "depends on: core-lib@0.2.0"
    },
    {
      "order": 3,
      "name": "top-app",
      "version": "0.4.0",
      "manifest_path": "<WORKSPACE_ROOT>/top-app/Cargo.toml",
      "level": 2,
      "dependencies": [
        "mid-lib@0.3.0"
      ],
      "order_reason": "depends on: mid-lib@0.3.0"
    }
  ],
  "skipped": []
}
